--- a/index.html
+++ b/index.html
@@ -38,43 +38,43 @@
   <h3>-5% sur toute votre commande en utilisant le code promo : </h3>
   <section class="container">
       <div class="item">
-        <a href=""><img class="item1" src="../assets/images/moonflight-removebg-preview.png" alt="Globes anti gravité" width="200px" height="200px"></a>
+        <a href=""><img class="item1" srassets/images/moonflight-removebg-preview.png" alt="Globes anti gravité" width="200px" height="200px"></a>
         <a href="globes_anti_gravite.html" class="button">Globes anti gravité</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/t.20.4-removebg-preview.png" alt="Globes bar" width="200px" height="200px">
+        <img class="item1" src="assets/images/t.20.4-removebg-preview.png" alt="Globes bar" width="200px" height="200px">
         <a href="" class="button">Globes bar</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/alfeolaguna1-removebg-preview.png" alt="Globes décoratifs" width="200px" height="200px">
+        <img class="item1" src="assets/images/alfeolaguna1-removebg-preview.png" alt="Globes décoratifs" width="200px" height="200px">
         <a href="" class="button">Globes décoratifs</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/moonflight-removebg-preview.png" alt="Globes design" width="200px" height="200px">
+        <img class="item1" src="assets/images/moonflight-removebg-preview.png" alt="Globes design" width="200px" height="200px">
         <a href="" class="button">Globes design</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/402612f-removebg-preview.png" alt="Globes écoliers" width="200px" height="200px">
+        <img class="item1" src="assets/images/402612f-removebg-preview.png" alt="Globes écoliers" width="200px" height="200px">
         <a href="" class="button">Globes écoliers</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/classica-removebg-preview.png" alt="Globes géo-politiques" width="200px" height="200px">
+        <img class="item1" src="assets/images/classica-removebg-preview.png" alt="Globes géo-politiques" width="200px" height="200px">
         <a href="" class="button">Globes géo-politiques</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/fcra-removebg-preview.png" alt="Globes en relief" width="200px" height="200px">
+        <img class="item1" src="assets/images/fcra-removebg-preview.png" alt="Globes en relief" width="200px" height="200px">
         <a href="" class="button">Globes en relief</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/035f-removebg-preview.png" alt="Globes gonflables" width="200px" height="200px">
+        <img class="item1" src="assets/images/035f-removebg-preview.png" alt="Globes gonflables" width="200px" height="200px">
         <a href="" class="button">Globes gonflables</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/224072-removebg-preview.png" alt="Sphère en cristal" width="200px" height="200px">
+        <img class="item1" src="assets/images/224072-removebg-preview.png" alt="Sphère en cristal" width="200px" height="200px">
         <a href="" class="button">Sphère en cristal</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/duo51-removebg-preview.png" alt="Globes grand diamètre" width="200px" height="200px">
+        <img class="item1" src="assets/images/duo51-removebg-preview.png" alt="Globes grand diamètre" width="200px" height="200px">
         <a href="" class="button">Globes grand diamètre</a>
       </div>
       <div class="item">
@@ -82,15 +82,15 @@
         <a href="" class="button">Globes historiques</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/goldclassic-removebg-preview.png" alt="Nationel Geographic" width="200px" height="200px">
+        <img class="item1" src="assets/images/goldclassic-removebg-preview.png" alt="Nationel Geographic" width="200px" height="200px">
         <a href="" class="button">Nationel Geographic</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/stellarplus-removebg-preview.png" alt="Globes & Astronomie" width="200px" height="200px">
+        <img class="item1" src="assets/images/stellarplus-removebg-preview.png" alt="Globes & Astronomie" width="200px" height="200px">
         <a href="" class="button">Globes & Astronomie</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/213451f-removebg-preview.png" alt="Autres" width="200px" height="200px">
+        <img class="item1" src="assets/images/213451f-removebg-preview.png" alt="Autres" width="200px" height="200px">
         <a href="" class="button">Autres</a>
   </section>
 </main>
@@ -99,10 +99,10 @@
 <footer>
 <ul>
   <li>
-    <a href="politiques-de-confidentialite.html">Politiques de confidentialité</a>
+    <a href="html/politiques-de-confidentialite.html">Politiques de confidentialité</a>
   </li>
   <li>
-    <a href="conditions-générales-de-ventes.html">CGV</a>
+    <a href="html/conditions-générales-de-ventes.html">CGV</a>
   </li>
 </ul>
 </footer>
