--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../CSS/header.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   
   <title>Globes terrestres</title>
 </head>
@@ -38,7 +38,7 @@
   <h3>-5% sur toute votre commande en utilisant le code promo : </h3>
   <section class="container">
       <div class="item">
-        <a href=""><img class="item1" srassets/images/moonflight-removebg-preview.png" alt="Globes anti gravité" width="200px" height="200px"></a>
+        <a href=""><img class="item1" src="assets/images/moonflight-removebg-preview.png" alt="Globes anti gravité" width="200px" height="200px"></a>
         <a href="globes_anti_gravite.html" class="button">Globes anti gravité</a>
       </div>
       <div class="item">
