--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <a href="" class="button">Globes grand diamètre</a>
       </div>
       <div class="item">
-        <img class="item1" src="../assets/images/gl313-removebg-preview.png" alt="Globes historiques" width="200px" height="200px">
+        <img class="item1" src="assets/images/gl313-removebg-preview.png" alt="Globes historiques" width="200px" height="200px">
         <a href="" class="button">Globes historiques</a>
       </div>
       <div class="item">
