--- a/index.html
+++ b/index.html
@@ -9,26 +9,12 @@
   <title>Globes terrestres</title>
 </head>
 <body>
-
+  <video autoplay muted loop id="myVideo">
+    <source src="Pexels Videos 1851190.mp4" type="video/mp4">
+  </video>
 <!--START END-->
 <header>
   <h1>Globes terrestres - Compagnie Française</h1>
-  <nav>
-    <ul>
-      <li>
-        <a href="accueil.html">Accueil</a>
-      </li>
-      <li>
-        <a href="boutique.html">Boutique</a>
-      </li>
-      <li>
-        <a href="contact.html">Contact</a>
-      </li>
-      <li>
-        <a href="articles.html">Nos articles</a>
-      </li>
-    </ul>
-  </nav>
 </header>
 <!--END HEADER-->
 
@@ -38,60 +24,60 @@
   <h3>-5% sur toute votre commande en utilisant le code promo : </h3>
   <section class="container">
       <div class="item">
-        <a href=""><img class="item1" src="assets/images/moonflight-removebg-preview.png" alt="Globes anti gravité" width="200px" height="200px"></a>
-        <a href="globes_anti_gravite.html" class="button">Globes anti gravité</a>
+        <img class="item1" src="assets/images/globes-anti-gravite.png" alt="Globes anti gravité" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-anti-gravite/" class="button">Globes anti gravité</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/t.20.4-removebg-preview.png" alt="Globes bar" width="200px" height="200px">
-        <a href="" class="button">Globes bar</a>
+        <img class="item1" src="assets/images/globes-bar.png" alt="Globes bar" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/mappemonde-bar-1/" class="button">Globes bar</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/alfeolaguna1-removebg-preview.png" alt="Globes décoratifs" width="200px" height="200px">
-        <a href="" class="button">Globes décoratifs</a>
+        <img class="item1" src="assets/images/globes-decoratifs.png" alt="Globes décoratifs" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/deco-globes/" class="button">Globes décoratifs</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/moonflight-removebg-preview.png" alt="Globes design" width="200px" height="200px">
-        <a href="" class="button">Globes design</a>
+        <img class="item1" src="assets/images/Globes-design.png" alt="Globes design" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-design/" class="button">Globes design</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/402612f-removebg-preview.png" alt="Globes écoliers" width="200px" height="200px">
-        <a href="" class="button">Globes écoliers</a>
+        <img class="item1" src="assets/images/globes-ecoliers.png" alt="Globes écoliers" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-enfants-ecoliers/" class="button">Globes écoliers</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/classica-removebg-preview.png" alt="Globes géo-politiques" width="200px" height="200px">
-        <a href="" class="button">Globes géo-politiques</a>
+        <img class="item1" src="assets/images/globes-geo-politiques.png" alt="Globes géo-politiques" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-geo-politiques/" class="button">Globes géo-politiques</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/fcra-removebg-preview.png" alt="Globes en relief" width="200px" height="200px">
-        <a href="" class="button">Globes en relief</a>
+        <img class="item1" src="assets/images/globes-en-relief.png" alt="Globes en relief" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-en-relief/" class="button">Globes en relief</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/035f-removebg-preview.png" alt="Globes gonflables" width="200px" height="200px">
-        <a href="" class="button">Globes gonflables</a>
+        <img class="item1" src="assets/images/globes-gonflables.png" alt="Globes gonflables" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-gonflables/" class="button">Globes gonflables</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/224072-removebg-preview.png" alt="Sphère en cristal" width="200px" height="200px">
-        <a href="" class="button">Sphère en cristal</a>
+        <img class="item1" src="assets/images/globe-en-cristal.png" alt="Sphère en cristal" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-sphere-en-cristal/" class="button">Sphère en cristal</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/duo51-removebg-preview.png" alt="Globes grand diamètre" width="200px" height="200px">
-        <a href="" class="button">Globes grand diamètre</a>
+        <img class="item1" src="assets/images/globes-grand-diametre.png" alt="Globes grand diamètre" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-de-bibliotheque/" class="button">Globes grand diamètre</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/gl313-removebg-preview.png" alt="Globes historiques" width="200px" height="200px">
-        <a href="" class="button">Globes historiques</a>
+        <img class="item1" src="assets/images/globes-historiques.png" alt="Globes historiques" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-historiques/" class="button">Globes historiques</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/goldclassic-removebg-preview.png" alt="Nationel Geographic" width="200px" height="200px">
-        <a href="" class="button">Nationel Geographic</a>
+        <img class="item1" src="assets/images/globes-national-geographic.png" alt="Nationel Geographic" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globe-national-geographic/" class="button">National Geographic</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/stellarplus-removebg-preview.png" alt="Globes & Astronomie" width="200px" height="200px">
-        <a href="" class="button">Globes & Astronomie</a>
+        <img class="item1" src="assets/images/globes-et-astronomie.png" alt="Globes & Astronomie" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-techniques/" class="button">Globes & Astronomie</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/213451f-removebg-preview.png" alt="Autres" width="200px" height="200px">
-        <a href="" class="button">Autres</a>
+        <img class="item1" src="assets/images/globes-autres.png" alt="Autres" width="200px" height="200px">
+        <a href="https://www.barsglobes-et-mappemondes.com/boutique/columbus-globes/globes-satellites/" class="button">Autres</a>
   </section>
 </main>
 
