ajout sitemap dans index.html

--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
   <li>
     <a href="html/conditions-générales-de-ventes.html">CGV</a>
   </li>
+  <li>
+    <a href="sitemap.xml">Sitemap</a>
+  </li>
 </ul>
 </footer>
 </body>
