essai v1 meta description

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet" type="text/css">
+  <meta name="description" content="Selection unique de Globes Terrestres. Voyagez depuis chez vous avec nos modèles anti-gravite, politiques, historiques et bien d'autres encore.">
   
   <title>Globes terrestres</title>
 </head>
