ajout code promo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!--START MAIN-->
 <main>
   <h2>Décorer, s'instruire, visiter, voyager...Des globes pour tous les goûts...</h2>
-  <h3>-5% sur toute votre commande en utilisant le code promo : </h3>
+  <h3>-5% sur toute votre commande en utilisant le code promo : GLOBE5</h3>
   <section class="container">
       <div class="item">
         <img class="item1" src="assets/images/globes-anti-gravite.png" alt="Globes anti gravité" width="200px" height="200px">
