--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <meta name="description" content="Selection unique de Globes Terrestres. Voyagez depuis chez vous avec nos modèles anti-gravite, politiques, historiques et bien d'autres encore.">
   
   <title>Globes terrestres</title>
+  <meta name="google-site-verification" content="e2nUTaIyamp5zJBpWH08O5CL2snDA6JSNf6OISJbmj0" />
 </head>
 <body>
   <video autoplay muted loop id="myVideo">
