modified cgv file

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <a href="html/politiques-de-confidentialite.html">Politiques de confidentialité</a>
   </li>
   <li>
-    <a href="html/conditions-générales-de-ventes.html">CGV</a>
+    <a href="html/conditions-generales-de-ventes.html">CGV</a>
   </li>
   <li>
     <a href="sitemap.xml">Sitemap</a>
