--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet" type="text/css">
   <meta name="description" content="Selection unique de Globes Terrestres. Voyagez depuis chez vous avec nos modèles anti-gravite, politiques, historiques et bien d'autres encore.">
-  
+  <link rel="icon" type="image/png" href="assets/images/globes-bar.png" />
   <title>Globes terrestres</title>
   <meta name="google-site-verification" content="e2nUTaIyamp5zJBpWH08O5CL2snDA6JSNf6OISJbmj0" />
 </head>
@@ -35,59 +35,59 @@
   <h3>-5% sur toute votre commande en utilisant le code promo : GLOBE5</h3>
   <section class="container">
       <div class="item">
-        <img class="item1" src="assets/images/globes-anti-gravite.png" alt="Globes anti gravité" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-anti-gravite.png" alt="Globes terrestres modèle anti-gravité" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-anti-gravite/" class="button">Globes anti gravité</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-bar.png" alt="Globes bar" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-bar.png" alt="Globes terrestres modèle bar" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/mappemonde-bar-1/" class="button">Globes bar</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-decoratifs.png" alt="Globes décoratifs" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-decoratifs.png" alt="Globes terrestres modèle décoratifs" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/deco-globes/" class="button">Globes décoratifs</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/Globes-design.png" alt="Globes design" width="200px" height="200px">
+        <img class="item1" src="assets/images/Globes-design.png" alt="Globes terrestres modèle design" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-design/" class="button">Globes design</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-ecoliers.png" alt="Globes écoliers" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-ecoliers.png" alt="Globes terrestres modèle écoliers" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-enfants-ecoliers/" class="button">Globes écoliers</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-geo-politiques.png" alt="Globes géo-politiques" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-geo-politiques.png" alt="Globes terrestres modèle géo-politiques" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-geo-politiques/" class="button">Globes géo-politiques</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-en-relief.png" alt="Globes en relief" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-en-relief.png" alt="Globes terrestres modèle en relief" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-en-relief/" class="button">Globes en relief</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-gonflables.png" alt="Globes gonflables" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-gonflables.png" alt="Globes terrestres modèle gonflables" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-gonflables/" class="button">Globes gonflables</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globe-en-cristal.png" alt="Sphère en cristal" width="200px" height="200px">
+        <img class="item1" src="assets/images/globe-en-cristal.png" alt="Globes terrestres modèle sphère en cristal" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-sphere-en-cristal/" class="button">Sphère en cristal</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-grand-diametre.png" alt="Globes grand diamètre" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-grand-diametre.png" alt="Globes terrestres modèle grand diamètre" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-de-bibliotheque/" class="button">Globes grand diamètre</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-historiques.png" alt="Globes historiques" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-historiques.png" alt="Globes terrestres modèle historiques" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-historiques/" class="button">Globes historiques</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-national-geographic.png" alt="Nationel Geographic" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-national-geographic.png" alt="Globes terrestres modèle National Geographic" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globe-national-geographic/" class="button">National Geographic</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-et-astronomie.png" alt="Globes & Astronomie" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-et-astronomie.png" alt="Globes terrestres modèle Astronomie" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/globes-techniques/" class="button">Globes & Astronomie</a>
       </div>
       <div class="item">
-        <img class="item1" src="assets/images/globes-autres.png" alt="Autres" width="200px" height="200px">
+        <img class="item1" src="assets/images/globes-autres.png" alt="Globes terrestres autres modèles" width="200px" height="200px">
         <a href="https://www.barsglobes-et-mappemondes.com/boutique/columbus-globes/globes-satellites/" class="button">Autres</a>
   </section>
 </main>
